--- a/WeClimb/Base.lproj/LaunchScreen.storyboard
+++ b/WeClimb/Base.lproj/LaunchScreen.storyboard
@@ -4,8 +4,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,25 +13,23 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
+                    <view key="view" contentMode="scaleToFill" id="UFg-eg-5s8">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreenIMG" translatesAutoresizingMaskIntoConstraints="NO" id="XCG-9F-UAc">
-                                <rect key="frame" x="61" y="338" width="300" height="180"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreenIMG" translatesAutoresizingMaskIntoConstraints="NO" id="GAJ-iN-Evm">
+                                <rect key="frame" x="107" y="326" width="200" height="200"/>
                             </imageView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" name="BackgroundColor"/>
+                        <viewLayoutGuide key="safeArea" id="exa-lS-8NF"/>
+                        <color key="backgroundColor" systemColor="labelColor"/>
                         <constraints>
-                            <constraint firstItem="XCG-9F-UAc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="61" id="8w6-aC-wFl"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="XCG-9F-UAc" secondAttribute="bottom" constant="300" id="KqP-To-vaz"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XCG-9F-UAc" secondAttribute="trailing" constant="32" id="drv-Fk-eOH"/>
-                            <constraint firstItem="XCG-9F-UAc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="279" id="hMl-FH-9OY"/>
+                            <constraint firstItem="exa-lS-8NF" firstAttribute="bottom" secondItem="GAJ-iN-Evm" secondAttribute="bottom" constant="292" id="4Xo-6P-6Zg"/>
+                            <constraint firstItem="GAJ-iN-Evm" firstAttribute="centerY" secondItem="UFg-eg-5s8" secondAttribute="centerY" id="EyP-ks-jod"/>
+                            <constraint firstItem="exa-lS-8NF" firstAttribute="trailing" secondItem="GAJ-iN-Evm" secondAttribute="trailing" constant="86" id="cM9-rr-yCM"/>
+                            <constraint firstItem="GAJ-iN-Evm" firstAttribute="top" secondItem="exa-lS-8NF" secondAttribute="top" constant="267" id="mxY-1A-kM7"/>
+                            <constraint firstItem="GAJ-iN-Evm" firstAttribute="leading" secondItem="exa-lS-8NF" secondAttribute="leading" constant="107" id="sbr-ku-bGa"/>
                         </constraints>
-                        <variation key="heightClass=regular-widthClass=compact">
-                            <nil key="backgroundColor"/>
-                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -41,8 +39,8 @@
     </scenes>
     <resources>
         <image name="LaunchScreenIMG" width="622" height="768"/>
-        <namedColor name="BackgroundColor">
-            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
