Fix: 휴대폰 런치스크린 최종

--- a/WeClimb/Base.lproj/LaunchScreen.storyboard
+++ b/WeClimb/Base.lproj/LaunchScreen.storyboard
@@ -4,8 +4,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,7 +22,7 @@
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="exa-lS-8NF"/>
-                        <color key="backgroundColor" systemColor="labelColor"/>
+                        <color key="backgroundColor" name="BackgroundColor"/>
                         <constraints>
                             <constraint firstItem="exa-lS-8NF" firstAttribute="bottom" secondItem="GAJ-iN-Evm" secondAttribute="bottom" constant="292" id="4Xo-6P-6Zg"/>
                             <constraint firstItem="GAJ-iN-Evm" firstAttribute="centerY" secondItem="UFg-eg-5s8" secondAttribute="centerY" id="EyP-ks-jod"/>
@@ -39,8 +39,8 @@
     </scenes>
     <resources>
         <image name="LaunchScreenIMG" width="622" height="768"/>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="BackgroundColor">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
