Fix: iOS 18버전 업데이트에 따른 버그로 인해 런치스크린 이미지 에셋 변경

--- a/WeClimb/Base.lproj/LaunchScreen.storyboard
+++ b/WeClimb/Base.lproj/LaunchScreen.storyboard
@@ -17,18 +17,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreenIMG" translatesAutoresizingMaskIntoConstraints="NO" id="GAJ-iN-Evm">
-                                <rect key="frame" x="107" y="326" width="200" height="200"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoImage" translatesAutoresizingMaskIntoConstraints="NO" id="yIJ-rS-MoD">
+                                <rect key="frame" x="135" y="334" width="123" height="120"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LogoText" translatesAutoresizingMaskIntoConstraints="NO" id="ePv-cy-wnm">
+                                <rect key="frame" x="113" y="456" width="167" height="62"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="62" id="Rkm-hW-t1Z"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="exa-lS-8NF"/>
                         <color key="backgroundColor" name="BackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="exa-lS-8NF" firstAttribute="bottom" secondItem="GAJ-iN-Evm" secondAttribute="bottom" constant="292" id="4Xo-6P-6Zg"/>
-                            <constraint firstItem="GAJ-iN-Evm" firstAttribute="centerY" secondItem="UFg-eg-5s8" secondAttribute="centerY" id="EyP-ks-jod"/>
-                            <constraint firstItem="exa-lS-8NF" firstAttribute="trailing" secondItem="GAJ-iN-Evm" secondAttribute="trailing" constant="86" id="cM9-rr-yCM"/>
-                            <constraint firstItem="GAJ-iN-Evm" firstAttribute="top" secondItem="exa-lS-8NF" secondAttribute="top" constant="267" id="mxY-1A-kM7"/>
-                            <constraint firstItem="GAJ-iN-Evm" firstAttribute="leading" secondItem="exa-lS-8NF" secondAttribute="leading" constant="107" id="sbr-ku-bGa"/>
+                            <constraint firstItem="yIJ-rS-MoD" firstAttribute="leading" secondItem="exa-lS-8NF" secondAttribute="leading" constant="135" id="618-23-V7Q"/>
+                            <constraint firstItem="ePv-cy-wnm" firstAttribute="top" secondItem="yIJ-rS-MoD" secondAttribute="bottom" constant="2" id="GGG-T3-vfK"/>
+                            <constraint firstItem="yIJ-rS-MoD" firstAttribute="centerX" secondItem="ePv-cy-wnm" secondAttribute="centerX" id="IPo-m8-h6v"/>
+                            <constraint firstItem="exa-lS-8NF" firstAttribute="bottom" secondItem="ePv-cy-wnm" secondAttribute="bottom" constant="300" id="TMk-uq-Zpw"/>
+                            <constraint firstItem="yIJ-rS-MoD" firstAttribute="top" secondItem="exa-lS-8NF" secondAttribute="top" constant="275" id="nBP-N9-BOv"/>
+                            <constraint firstItem="yIJ-rS-MoD" firstAttribute="centerX" secondItem="UFg-eg-5s8" secondAttribute="centerX" id="paM-F5-wR2"/>
+                            <constraint firstItem="ePv-cy-wnm" firstAttribute="leading" secondItem="exa-lS-8NF" secondAttribute="leading" constant="113" id="ygd-aT-vUc"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -38,7 +46,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="LaunchScreenIMG" width="622" height="768"/>
+        <image name="LogoImage" width="266.66665649414062" height="266.66665649414062"/>
+        <image name="LogoText" width="796.33331298828125" height="147.33332824707031"/>
         <namedColor name="BackgroundColor">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
